java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advFixture/ClassPackageConflict1.java
package c;
import c.d.*;

class Test {
  a.<error descr="Cannot resolve symbol 'b'">b</error> myB;
}